--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@
 /backend/!**/src/test/**/target/
 backend/mvnw.cmd
 backend/mvnw
+backend/.mvn
+
+#Frontend
+/frontend/node_modules
+/frontend/dist
+/frontend/dist-ssr
+/frontend/*.local
