--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -63,8 +63,23 @@
              <version>4.18.0</version>
              <scope>test</scope>
          </dependency> -->
+           <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>5.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.11.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>6.1.12</version>
+        </dependency>
 
-     </dependencies>
+    </dependencies>
 
      <build>
          <plugins>
