--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -73,8 +73,12 @@
             <artifactId>junit-jupiter</artifactId>
             <version>5.11.1</version>
         </dependency>
-
-    </dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+            <version>3.3.2</version>
+        </dependency>
+        </dependencies>
 
      <build>
          <plugins>
